--- a/index.html
+++ b/index.html
@@ -27,21 +27,35 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Alibaba Group:
-[<a href="https://github.com/alibaba">https://github.com/alibaba</a>]</p>
+        <p>
+        <b>Alibaba Group:</b><br/>
+        Github: <a href="https://github.com/alibaba">https://github.com/alibaba</a><br/>
+        </p>
 
-<p>Alibaba Taobao:
-[<a href="https://github.com/taobao">https://github.com/taobao</a>]</p>
-
-<p>Alibaba B2B:
-[<a href="https://github.com/alibabatech">https://github.com/alibabatech</a>]</p>
+        <p>
+        <b>Alibaba Taobao:</b><br/>
+        Github: <a href="https://github.com/taobao">https://github.com/taobao</a><br/>
+        Homepage: <a href="http://code.taobao.org">http://code.taobao.org</a><br/>
+        </p>
+        
+        <p>
+        <b>Alibaba B2B:</b><br/>
+        Github: <a href="https://github.com/alibabatech">https://github.com/alibabatech</a><br/>
+        Homepage: <a href="http://code.alibabatech.com">http://code.alibabatech.com</a><br/>
+        </p>
+        
+        <p>
+        <b>Alibaba PHPWind:</b><br/>
+        Github: <a href="https://github.com/phpwind">https://github.com/phpwind</a><br/>
+        Homepage: <a href="http://code.alibabatech.com/wiki/display/wind">http://code.alibabatech.com/wiki/display/wind</a><br/>
+        </p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Copyright © 1999-2012  <a href="http://www.alibaba.com">Alibaba.com</a> Limited and licensors. All rights reserved.</p>
       </footer>
     </div>
 
