--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/alibaba">View on GitHub</a>
 
           <h1 id="project_title">Alibaba Open Source</h1>
-          <h2 id="project_tagline">The alibaba github homepage.</h2>
+          <h2 id="project_tagline">The alibaba group open source software list.</h2>
 
         </header>
     </div>
@@ -30,24 +30,28 @@
         <p>
         <b>Alibaba Group:</b><br/>
         Github: <a href="https://github.com/alibaba">https://github.com/alibaba</a><br/>
+        About: <a href="http://news.alibaba.com/specials/aboutalibaba/aligroup/index.html">http://news.alibaba.com/specials/aboutalibaba/aligroup/index.html</a><br/>
         </p>
 
         <p>
         <b>Alibaba Taobao:</b><br/>
         Github: <a href="https://github.com/taobao">https://github.com/taobao</a><br/>
-        Homepage: <a href="http://code.taobao.org">http://code.taobao.org</a><br/>
+        Wiki: <a href="http://code.taobao.org">http://code.taobao.org</a><br/>
+        Site: <a href="http://www.taobao.com">http://www.taobao.com</a><br/>
         </p>
         
         <p>
         <b>Alibaba B2B:</b><br/>
         Github: <a href="https://github.com/alibabatech">https://github.com/alibabatech</a><br/>
-        Homepage: <a href="http://code.alibabatech.com">http://code.alibabatech.com</a><br/>
+        Wiki: <a href="http://code.alibabatech.com">http://code.alibabatech.com</a><br/>
+        Site: <a href="http://www.alibaba.com">http://www.alibaba.com</a><br/>
         </p>
         
         <p>
         <b>Alibaba PHPWind:</b><br/>
         Github: <a href="https://github.com/phpwind">https://github.com/phpwind</a><br/>
-        Homepage: <a href="http://code.alibabatech.com/wiki/display/wind">http://code.alibabatech.com/wiki/display/wind</a><br/>
+        Wiki: <a href="http://code.alibabatech.com/wiki/display/wind">http://code.alibabatech.com/wiki/display/wind</a><br/>
+        Site: <a href="http://www.phpwind.com">http://www.phpwind.com</a><br/>
         </p>
       </section>
     </div>
