--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         Site: <a href="http://www.phpwind.com">http://www.phpwind.com</a><br/>
         </p>
         
-        <p><a href="http://click.aliyun.com/m/4337/"><img src="aliyun.jpg" alt="阿里云" /></a></p>
+        <p><a href="http://click.aliyun.com/m/4337/"><img src="http://dubbo.io/aliyun.jpg" alt="阿里云" /></a></p>
       </section>
     </div>
 
